# ACCA_2025

./: .gitignore  DB.py  DB_adjustment.py  README.md  fix_velocity.py  mpc_8_best_param.txt  path_making.py  pure_pursuit1.py  synronizer.py  velo.py
src/: avt_launch.txt  erp_twist_lpf.py
src/cone_fusion/: CMakeLists.txt
src/cone_fusion/src/: fusion_conetracking.cpp  fusion_node.cpp  new_fusion_onecam.cpp  newnew.cpp  traffic_fusion.cpp
src/erp42/erp42_control/: package.xml  setup.py
src/fusion/src/: fusion_bs_pointstamped_3cam.cpp
src/lidar_localization_ros2-humble/param/: localization.yaml
src/localization/: setup.py
src/localization/launch/: bicycle_wheel_localization.launch.py  bum_wheel_localization.launch.py  kf_wheel_localization.launch.py  lpf_wheel_localization.launch.py  navsat_transform.launch.py  sensor.launch.py
src/localization/localization/: bicycle_steer_estimation.py  dfilter_yaw.py  erp_twist.py  erp_twist_body.py  erp_twist_lpf (copy).py  erp_twist_world.py  erp_twist_world_lpf.py  fake_feedback.py  gps_odom.py  gps_odom_dummy.py  gps_variance_filter.py  imu_bias_measure (copy).py  imu_bias_measure.py  imu_encoder_odometry.py  imu_odometry.py  imu_scalefactor_measure.py  imu_test.py  magnet_heading.py  map_odom_tf_publisher.py  orientation_source_2.py  orientation_source_4.py  position_filter_yaw.py  rotate_yaw.py  rotate_yaw_bum.py  vibration_anlyzer.py  wheel_odometry.py  wheel_odometry_steer.py
src/localization/params/: navsat_transform.yaml  param_ekf.yaml  param_ekf_test.yaml  (+2 more)
src/localization_cpp/: CMakeLists.txt  package.xml
src/odometry/: package.xml  setup.py
src/path_making/: NODE
src/sensor/manta_yolo_cam/: CMakeLists.txt  package.xml
src/sensor/manta_yolo_cam/src/: camera_inference.py  camera_inference_node.cpp
src/tf/: CMakeLists.txt
src/yolo/: setup.py
(+83 files in other folders)
